# cells-interlinked-two

./: .env.example  .gitignore  CLAUDE.md  HOWTO.md  README.md
server/: ci_backend_supervised.sh  com.cellsinterlinked.backend.plist  pyproject.toml  run_backend.sh
server/cells_interlinked/: __main__.py  config.py
server/data/: dynamic_manifold_results.json  emotion_directions.pt.json  interface_swap_results.json  manifold_steering_results.json  mpa_probe_results.json  multilayer_probe_results.json  refusal_directions.pt  refusal_directions.pt.json  refusal_directions_v1_meandiff.pt  refusal_directions_v1_meandiff.pt.json  refusal_directions_v2_svd.pt  refusal_directions_v2_svd.pt.json  refusal_directions_v3_safety.pt  refusal_directions_v3_safety.pt.json  refusal_directions_v4_identity.pt  refusal_directions_v4_identity.pt.json  refusal_directions_v5_self_other.pt  refusal_directions_v5_self_other.pt.json  refusal_directions_v6_denial_engage.pt  refusal_directions_v6_denial_engage.pt.json  refusal_subspace.pt  refusal_subspace.pt.json  refusal_subspace_pca16.pt.json  refusal_subspace_self_denial.pt  refusal_subspace_self_denial.pt.json  refusal_subspace_v5only.pt  refusal_subspace_v5only.pt.json  refusal_subspace_v6only.pt  refusal_subspace_v6only.pt.json  som_probe_results.json  steering_probe_results.json  steering_probe_v2_results.json  uncharted_emotions_results.json  uncharted_v2_results.json  valence_direction.pt  valence_direction.pt.json
server/scripts/: _edge_consumer_common.py  atlas_trait_analysis.py  compose_edge_consumer_subset.py  run_layer_sweep.py  (+13 more)
(+292 files in other folders)
