[project]
name = "cells-interlinked-two"
version = "0.2.0"
description = "Cells Interlinked v2 — NLA-decoded V-K probes, channel-vs-channel coherence, on M2 Ultra MPS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.5",
    "transformers>=4.51",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "tokenizers>=0.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "aiosqlite>=0.20",
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "anthropic>=0.97.0",
    "google-genai>=1.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cells_interlinked"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
